# GpuInterface

./: .gitignore  BasicTypeAliases.h  CMakeLists.txt  GpuInterface.h  GpuInterfaceDLL.h  README.md  VkGpuInterface.cpp  VkGpuInterface.h  VkHelpers.cpp  VkHelpers.h  cmake_install.cmake
Functions/: TransitionBarrier.h
ShaderCompile/: ShaderCompile.h  SlangCompileContext.cpp  SlangCompileContext.h  SlangCompiledUnit.h
Types/: Buffer.cpp  Buffer.h  DescriptorHandle.h  DescriptorHeapBuffer.cpp  DescriptorHeapBuffer.h  Device.h  DeviceManager.cpp  DeviceManager.h  Frame.h  GpuTypeInfo.h  GpuTypeRegister.cpp  GpuTypeRegister.h  IGpuReflectedType.h  PipelineCompute.cpp  PipelineCompute.h  PipelineGraphics.cpp  PipelineGraphics.h  Resource.h  ResourceSet.h  Sampler.cpp  Sampler.h  Swapchain.cpp  Swapchain.h  SwapchainOutput.h  TaskGraph.cpp  TaskGraph.h  TaskNode.h  Texture.cpp  Texture.h
Types/TaskNodes/: StageBarrier.h  SubmitAndPresent.h
Util/: FNV1a.h
shaders/: combinedVertFrag.slang
